# fast-api-pure

./: .env.exaple  Makefile  README.md  pyproject.toml  pyproject.toml.example
docs/: 00_setup.md  01_layers.md  02_dto_usage.md  03_database_acid_uow.md  04_database_migrations.md  05_makefile_commands.md
scripts/: script_1.py  script_2.py
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2025_05_21_1408-96fb47962c6a_initial.py
src/app/api/: __init__.py  example.py
src/app/config/: db.py  settings.py  uow.py
src/app/dao/: __init__.py  example.py
src/app/dto/: __init__.py  base.py  example.py
src/app/schemas/: __init__.py  base.py  example.py
src/app/services/: __init__.py  example.py
